# Predefination

./: CMakeLists.txt  LICENSE  Predefination.pro  README.md  macro.cpp  macro.h  main.cpp
include/: macro.hpp
src/: macro.cpp  main.cpp
